# fastapi-sqlserver-docker

./: .gitignore  docker-compose.yml  pyproject.toml
app/: Dockerfile  app.py  db.py  requirements.txt
