[project]
name = "fastapi-sqlserver-docker"
version = "0.1.0"
description = ""
authors = [{ name = "acanois" }]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi[standard] (>=0.124.0,<0.125.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pyodbc (>=5.3.0,<6.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
